--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antony Bush - One Piece Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="https://i.pinimg.com/564x/8b/16/7a/8b167af653c145dec97d69db5adb9a27.jpg" alt="Straw Hat" class="logo-img">
+                <div class="logo-img straw-hat-logo"></div>
                 <span class="logo-text">Antony Bush</span>
             </div>
             <ul class="nav-menu">
@@ -23,6 +23,9 @@
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
+                <li><button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+                    <i class="fas fa-moon"></i>
+                </button></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -35,32 +38,33 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-background">
-            <img src="https://i.pinimg.com/originals/f0/8f/d4/f08fd4c4c4c4c4c4c4c4c4c4c4c4c4c4.jpg" alt="One Piece Ship" class="hero-bg-img">
+            <div class="hero-bg-img ocean-scene"></div>
             <div class="hero-overlay"></div>
         </div>
         <div class="hero-content">
             <div class="hero-text">
                 <h1 class="hero-title">
                     <span class="title-line">Antony Bush</span>
-                    <span class="title-subtitle">Software Engineer & Dream Chaser</span>
+                    <span class="title-subtitle">Software Development Engineer</span>
                 </h1>
                 <p class="hero-description">
-                    Just like Luffy's journey to become the Pirate King, I'm on my own adventure to master the seas of software development. 
-                    Specializing in backend systems, distributed architectures, and turning impossible dreams into reality through code.
+                    Passionate software engineer specializing in backend development, distributed systems, and infrastructure automation. 
+                    With expertise in architecting scalable solutions and a proven track record of delivering high-impact projects 
+                    that serve millions of users at enterprise scale.
                 </p>
                 <div class="hero-buttons">
                     <a href="#about" class="btn btn-primary">
-                        <i class="fas fa-anchor"></i>
-                        Set Sail with Me
+                        <i class="fas fa-user"></i>
+                        About Me
                     </a>
                     <a href="#contact" class="btn btn-secondary">
-                        <i class="fas fa-compass"></i>
-                        Join My Crew
+                        <i class="fas fa-envelope"></i>
+                        Get In Touch
                     </a>
                 </div>
             </div>
             <div class="hero-character">
-                <img src="https://i.pinimg.com/564x/8d/c7/7c/8dc77c4b4b4b4b4b4b4b4b4b4b4b4b4b.jpg" alt="Luffy" class="character-img">
+                <div class="character-img luffy-character"></div>
                 <div class="character-speech-bubble">
                     <p>"I'm gonna be the King of Software Engineers!"</p>
                 </div>
@@ -78,24 +82,25 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">
-                    <img src="https://i.pinimg.com/564x/2e/8f/1a/2e8f1a1a1a1a1a1a1a1a1a1a1a1a1a1a.jpg" alt="Wanted Poster" class="section-icon">
-                    About This Pirate
+                    <div class="section-icon wanted-poster"></div>
+                    About Me
                 </h2>
-                <p class="section-subtitle">My Journey Through the Grand Line of Technology</p>
+                <p class="section-subtitle">Professional Journey & Technical Expertise</p>
             </div>
             <div class="about-content">
                 <div class="about-text">
                     <div class="about-card">
-                        <h3>My Story</h3>
+                        <h3>Professional Overview</h3>
                         <p>
-                            Like Monkey D. Luffy setting sail from Foosha Village, I began my journey from Mumbai with a simple dream: 
-                            to become a legendary Software Engineer. Armed with determination and a passion for backend development, 
-                            I've navigated through the challenging waters of distributed systems and infrastructure automation.
+                            I'm a dedicated Software Development Engineer based in Mumbai, with a passion for creating robust, 
+                            scalable backend systems. My journey in technology has been driven by a commitment to excellence 
+                            and continuous learning in the rapidly evolving landscape of distributed systems and cloud infrastructure.
                         </p>
                         <p>
-                            Currently serving as a Software Development Engineer at Jio Platforms Limited, I've proven my worth by 
-                            engineering critical microservices migrations, optimizing media servers, and architecting scalable solutions 
-                            that serve millions of users - just like how Luffy gathers his crew to take on the world!
+                            Currently serving as a Software Development Engineer at Jio Platforms Limited, I've successfully 
+                            led critical microservices migrations, optimized high-traffic media servers, and architected solutions 
+                            that reliably serve millions of users. My expertise spans across backend development, DevOps practices, 
+                            and infrastructure automation.
                         </p>
                     </div>
                     <div class="about-stats">
@@ -119,7 +124,7 @@
                 </div>
                 <div class="about-image">
                     <div class="image-container">
-                        <img src="https://i.pinimg.com/564x/a1/b2/c3/a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6.jpg" alt="Straw Hat Crew" class="crew-img">
+                        <div class="crew-img straw-hat-crew"></div>
                         <div class="image-overlay">
                             <p>"Every great pirate needs a great crew - and every great developer needs great technologies!"</p>
                         </div>
@@ -134,7 +139,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">
-                    <img src="https://i.pinimg.com/564x/7f/8e/9d/7f8e9d0a1b2c3d4e5f6g7h8i9j0k1l2m.jpg" alt="Treasure Map" class="section-icon">
+                    <div class="section-icon treasure-map"></div>
                     My Adventures
                 </h2>
                 <p class="section-subtitle">Battles Fought and Victories Won in the World of Code</p>
@@ -142,7 +147,7 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-marker">
-                        <img src="https://i.pinimg.com/564x/1a/2b/3c/1a2b3c4d5e6f7g8h9i0j1k2l3m4n5o6p.jpg" alt="Jio Logo" class="company-logo">
+                        <div class="company-logo jio-logo"></div>
                     </div>
                     <div class="timeline-content">
                         <div class="experience-card">
@@ -189,7 +194,7 @@
 
                 <div class="timeline-item">
                     <div class="timeline-marker">
-                        <img src="https://i.pinimg.com/564x/2b/3c/4d/2b3c4d5e6f7g8h9i0j1k2l3m4n5o6p7q.jpg" alt="Zedex Logo" class="company-logo">
+                        <div class="company-logo zedex-logo"></div>
                     </div>
                     <div class="timeline-content">
                         <div class="experience-card">
@@ -226,7 +231,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">
-                    <img src="https://i.pinimg.com/564x/3c/4d/5e/3c4d5e6f7g8h9i0j1k2l3m4n5o6p7q8r.jpg" alt="Devil Fruit" class="section-icon">
+                    <div class="section-icon devil-fruit"></div>
                     My Devil Fruit Powers
                 </h2>
                 <p class="section-subtitle">Special Abilities Gained Throughout My Journey</p>
@@ -234,7 +239,7 @@
             <div class="skills-grid">
                 <div class="skill-category">
                     <div class="category-header">
-                        <img src="https://i.pinimg.com/564x/4d/5e/6f/4d5e6f7g8h9i0j1k2l3m4n5o6p7q8r9s.jpg" alt="Programming" class="category-icon">
+                        <div class="category-icon programming-icon"></div>
                         <h3>Programming & Runtimes</h3>
                     </div>
                     <div class="skill-items">
@@ -263,7 +268,7 @@
 
                 <div class="skill-category">
                     <div class="category-header">
-                        <img src="https://i.pinimg.com/564x/5e/6f/7g/5e6f7g8h9i0j1k2l3m4n5o6p7q8r9s0t.jpg" alt="DevOps" class="category-icon">
+                        <div class="category-icon devops-icon"></div>
                         <h3>DevOps & Infrastructure</h3>
                     </div>
                     <div class="skill-items">
@@ -308,7 +313,7 @@
 
                 <div class="skill-category">
                     <div class="category-header">
-                        <img src="https://i.pinimg.com/564x/6f/7g/8h/6f7g8h9i0j1k2l3m4n5o6p7q8r9s0t1u.jpg" alt="Database" class="category-icon">
+                        <div class="category-icon database-icon"></div>
                         <h3>Databases & Caching</h3>
                     </div>
                     <div class="skill-items">
@@ -333,7 +338,7 @@
 
                 <div class="skill-category">
                     <div class="category-header">
-                        <img src="https://i.pinimg.com/564x/7g/8h/9i/7g8h9i0j1k2l3m4n5o6p7q8r9s0t1u2v.jpg" alt="Monitoring" class="category-icon">
+                        <div class="category-icon monitoring-icon"></div>
                         <h3>Monitoring & Observability</h3>
                     </div>
                     <div class="skill-items">
@@ -360,7 +365,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">
-                    <img src="https://i.pinimg.com/564x/8h/9i/0j/8h9i0j1k2l3m4n5o6p7q8r9s0t1u2v3w.jpg" alt="Marine Academy" class="section-icon">
+                    <div class="section-icon marine-academy"></div>
                     Training Grounds
                 </h2>
                 <p class="section-subtitle">Where I Honed My Skills Before Setting Sail</p>
@@ -368,7 +373,7 @@
             <div class="education-content">
                 <div class="education-card">
                     <div class="education-header">
-                        <img src="https://i.pinimg.com/564x/9i/0j/1k/9i0j1k2l3m4n5o6p7q8r9s0t1u2v3w4x.jpg" alt="Mumbai University" class="university-logo">
+                        <div class="university-logo mumbai-university"></div>
                         <div class="education-info">
                             <h3>Bachelor of Engineering in Computer Engineering</h3>
                             <p class="university">Mumbai University</p>
@@ -396,7 +401,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">
-                    <img src="https://i.pinimg.com/564x/0j/1k/2l/0j1k2l3m4n5o6p7q8r9s0t1u2v3w4x5y.jpg" alt="Treasure" class="section-icon">
+                    <div class="section-icon treasure-chest"></div>
                     Legendary Treasures
                 </h2>
                 <p class="section-subtitle">Projects That Showcase My Journey Through the Grand Line</p>
@@ -404,7 +409,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://i.pinimg.com/564x/1k/2l/3m/1k2l3m4n5o6p7q8r9s0t1u2v3w4x5y6z.jpg" alt="Transmission Line" class="project-img">
+                        <div class="project-img transmission-project"></div>
                         <div class="project-overlay">
                             <a href="#" class="project-link">
                                 <i class="fab fa-github"></i>
@@ -443,7 +448,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">
-                    <img src="https://i.pinimg.com/564x/2l/3m/4n/2l3m4n5o6p7q8r9s0t1u2v3w4x5y6z7a.jpg" alt="Den Den Mushi" class="section-icon">
+                    <div class="section-icon den-den-mushi"></div>
                     Join My Crew
                 </h2>
                 <p class="section-subtitle">Ready to Set Sail Together? Let's Connect!</p>
