Dark mode only: Remove theme toggle, improve text contrast, replace images with tech elements

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
-                <li><button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
-                    <i class="fas fa-moon"></i>
-                </button></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -66,7 +63,7 @@
             <div class="hero-character">
                 <div class="character-img luffy-character"></div>
                 <div class="character-speech-bubble">
-                    <p>"I'm gonna be the King of Software Engineers!"</p>
+                    <p>"Building the future with code!"</p>
                 </div>
             </div>
         </div>
